更新项目配置，修改pom.xml以支持Spring Boot 2.7.18和Java 1.8，调整打包方式为jar，添加Quartz和Spring Boot依赖；更新README.md以反映系统架构和功能特点；更新.gitignore以排除node_modules和dist目录；删除不再使用的Java类和数据库相关配置文件。